--- a/adminpanel/package.json
+++ b/adminpanel/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "adminpanel",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,20 +7,16 @@
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "host": "vite --host"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.14",
+    "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.2",
-    "framer-motion": "^12.23.24",
-    "lottie-react": "^2.4.1",
-    "lucide-react": "^0.546.0",
+    "lucide-react": "^0.552.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.4",
-    "tailwindcss": "^4.1.14"
+    "react-router-dom": "^7.9.5",
+    "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
